<resources>
    <string name="app_name">GTM Companion App</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GTM Home Services</string>
    <string name="nav_header_subtitle">Todd Ovenhouse</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_placeholder">Name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="jobs">Jobs</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="messages_fragment">Messages Fragment</string>
    <string name="logo">logo</string>
    <string name="code">Code</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="weather_fragment">Weather Fragment</string>
    <string name="gtm_home_services">GTM Home Services</string>
    <string name="calendar">calendar</string>
    <string name="profile_picture">profile picture</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="time_remaining_placeholder">Time Remaining: 120</string>
</resources>
