<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="18dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="18dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="400dp"
            android:layout_height="175dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/logo"
            android:padding="16dp"
            android:src="@drawable/ic_logo_login" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginTop="50dp"
            android:background="#40ffffff"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="12dp"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginTop="10dp"
            android:background="#40ffffff"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <CheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="6dp"
            android:buttonTint="@color/white"
            android:padding="8dp"
            android:text="@string/remember_me"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/cbRememberMe"
            android:clickable="true"
            android:drawableStart="@drawable/ic_lock_open"
            android:drawablePadding="12dp"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bLogin"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cbRememberMe"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_white"
            android:padding="16dp"
            android:text="@string/log_in"
            android:textColor="#3B5999"
            android:textStyle="bold" />

        <View
            android:id="@+id/loginView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/bLogin"
            android:background="#224080" />

        <Button
            android:id="@+id/bRegisterLink"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginView"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_blue"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <View
            android:id="@+id/registerView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/bRegisterLink"
            android:background="#224080" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registerView"
            android:layout_marginTop="10dp"
            android:indeterminate="true"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>