<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="18dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="18dp"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/image"
        android:layout_width="400dp"
        android:layout_height="175dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/logo"
        android:padding="16dp"
        android:src="@drawable/ic_logo_login" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="50dp"
        android:background="@drawable/text_view_round"
        android:drawableStart="@drawable/ic_profile"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFullName"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_round"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_round"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/bRegister"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_white"
        android:padding="16dp"
        android:text="@string/register"
        android:textColor="#BB5D77"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLoginLink"
        style="@style/Base.TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bRegister"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:drawableStart="@drawable/ic_menu_account"
        android:drawablePadding="12dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginLink"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

</RelativeLayout>